--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,6 @@ main {
     color: #000;
 }
 
-
 footer{
     width: 100%;
     position: absolute;
@@ -195,4 +194,48 @@ footer{
     background-color: #000;
     color: #FFF;
     padding: 50px 0;
+}
+
+@media(max-width: 480px){
+    header{
+        width: 100%;
+    }
+
+    #logo{
+        display: block;
+        position: relative;
+        margin: 0 auto;
+        left: 0;
+        width: 50px;
+    }
+
+    #navbar{
+        display: none;
+    }
+
+    #title-container{
+        min-width: 100%;
+        margin-top: 20px;
+    }
+
+    #posts-container{
+        margin-top: 20px;
+    }
+
+    .post-box{
+        flex: 100% 1 0;
+        padding: 15px;
+        margin: 0;
+    }
+
+    #post-container{
+        grid-template-columns: 100%;
+        padding: 15px;
+        grid-template-areas: "main"
+        "sidebar";
+    }
+
+    .img-container img{
+        width: 100%;
+    }
 }
